# botecobot

./: Dockerfile  Pipfile  Procfile  README.md  boteco.py  fly.toml  pyproject.toml  tracker.py
boteco/: bot.py  config.py  garçom.py  main.py  setup.py
